@@ -54,7 +54,7 @@ public class HeadDecorator implements ObjectDecorator {
   protected void activate(ComponentContext cc) throws Exception {
     PARAM_K = config.getInt(PROPKEY_K);
     MAX_ITER = config.getInt(PROPKEY_MAXITER);
-    Logger.info("BrainzzZ!");
+    Logger.info("Head decorator activated");
   }
 
   protected void deactivate(ComponentContext cc) throws Exception {
@@ -163,11 +163,11 @@ public class HeadDecorator implements ObjectDecorator {
         object.setProperty(OBJ_PROPKEY_HEAD_BBOX, new BoundingBox(
                 new Position((int) boundaries[0].getX(), (int) boundaries[0].getY()),
                 new Position((int) boundaries[1].getX(), (int) boundaries[1].getY())));
-        object.setProperty(OBJ_PROPKEY_HEAD_RADIUS, new Double(clusters[optimal].radius()));
+        object.setProperty(OBJ_PROPKEY_HEAD_RADIUS, Double.valueOf(clusters[optimal].radius()));
         object.setProperty(OBJ_PROPKEY_HEAD_CLUSTERS, clusters);
       }
     } catch (Exception e) {
-      Logger.error("Error in head finder!", e.getCause());
+      Logger.error("Error in head finder!", e);
     }
   }
 }
